--- a/src/Johnson.Process.Website/Web.config
+++ b/src/Johnson.Process.Website/Web.config
@@ -22,6 +22,7 @@
     </log4net>
   <appSettings >
     <add key="GZJohnsonProcess_ConnectionString" value="server=(local)\sqlexpress;database=GZJohnsonProcess ;uid=sa;pwd=love00"/>
+    <add key="FailPdct_ConnectionString" value="server=(local)\sqlexpress;database=GZJohnsonProcess ;uid=sa;pwd=love00"/>
     <add key="JohnsonProcessPath" value="~/"/>
     <add key="tempFolderId" value="44"/>
       <add key="edoc2BaseUrl" value="http://192.168.1.145/edoc2v4"/>
