--- a/src/Johnson.Process.Core/Johnson.Process.Core.csproj
+++ b/src/Johnson.Process.Core/Johnson.Process.Core.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Material.cs" />
     <Compile Include="ProcessEmailEntity.cs" />
     <Compile Include="ProcessFile.cs" />
+    <Compile Include="ProcessForm.cs" />
     <Compile Include="ProductReworkForm.cs" />
     <Compile Include="ProductReworkProcess.cs" />
     <Compile Include="UltimusHelper.cs" />
